Fix - Actionbar menus are hidden behind the document viewer

--- a/geonode_mapstore_client/client/themes/geonode/less/_main-event.less
+++ b/geonode_mapstore_client/client/themes/geonode/less/_main-event.less
@@ -32,7 +32,6 @@
     justify-content: center;
     font-size: 14px;
     flex-direction: column;
-    z-index: 100;
 }
 .gn-main-event-content {
     position: relative;
